# Testing

./: .dockerignore  .gitignore  .replit  CHANGELOG.md  DEBUGGING_FLYIO.md  DEPLOYMENT_READY.txt  Dockerfile  FINAL_STATUS.md  FLY_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT.md  account.json.example  app.py  dreamina_service.py  fly.toml  pyproject.toml  render.yaml  replit.md  requirements.txt
attached_assets/: Pasted--name-store-country-sign-value-MEIEDIegjdKuu5aInYPbAwQgb2SOfNXLAW64-1761378893697_1761378893701.txt
