[project]
name = "dreamina-api-server"
version = "1.0.0"
description = "Flask-based REST API server that wraps Dreamina's AI image generation capabilities"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
